# open-reviewer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  devenv.nix  health_check_example.py  index.html  mkdocs.yml
.claude/: settings.json
.claude/hooks/: pre-completion.sh
.github/: reviewer-gate.yaml
.github/actions/claude-code-action/: action.yml
.github/actions/claude-code-action/base-action/: action.yml
.github/actions/claude-code-action/base-action/src/: run-claude.ts  validate-env.ts
.github/actions/claude-code-action/test/: sanitizer.test.ts
.github/scripts/: check_models_changed.sh  code_quality_checks.sh  fetch_similar_code.py  filter_chunks.py  generate_review_prompt.py  parse_agents_md.py  setup_pal_mcp.sh  template_configs.sh
.github/workflows/: ci.yml  pr-gate.yml  pre-commit-ci.yml  python-tests.yml  review.yml  static.yml  test-claude-install.yml
docs/: contributing.md  index.md
docs/explanation/: architecture.md  index.md  multi-model-consensus.md  pr-quality-scoring.md  semantic-context.md  token-budgets.md
docs/guide/: github-integration.md  index.md
docs/how-to/: add-test-cases.md  configure-models.md  deploy-github-actions.md  index-repository.md  index.md  pr-quality-gate.md  setup-semantic-search.md
docs/reference/: cli.md  index.md  model-tiers.md  test-categories.md
docs/reference/api/: embeddings.md  evaluators.md  index.md  models.md  semantic.md
docs/tutorials/: first-evaluation.md  github-actions-integration.md  index.md  multi-model-consensus.md
review_eval/: README.md  pyproject.toml
review_eval/review_eval/: __init__.py  __main__.py  docs_aware_evaluator.py  docs_loader.py  evaluator.py  health_check.py  index_repo.py  models.py  multi_model_evaluator.py  scoring_engine.py  semantic_evaluator.py  update_embeddings.py
review_eval/review_eval/collectors/: __init__.py  ai_review_collector.py  base.py  coverage_collector.py  static_analysis_collector.py  test_collector.py
review_eval/review_eval/fixtures/python/: any_type_abuse.py  async_await_issues.py  missing_types.py  psycopg2_usage.py  utils_module.py  yaml_unsafe_load.py
review_eval/review_eval/fixtures/security/: command_injection.py  hardcoded_secret.py  sql_injection.py
review_eval/review_eval/fixtures/sql/: missing_is_prefix.sql  select_star.sql  varchar_n.sql
review_eval/review_eval/fixtures/typescript/: any_types.ts  default_export.tsx  direct_postgres.ts  raw_fetch.ts
review_eval/review_eval/semantic/: __init__.py  ast_parser.py  models.py  repo_map.py  search.py
review_eval/review_eval/semantic/embeddings/: __init__.py  chunker.py  client.py  vector_store.py
review_eval/tests/: conftest.py  test_async_patterns.py  test_chunker_polyglot.py  test_collectors.py  test_docs_aware.py  test_embedding_client_retry.py  test_health_check.py  test_multi_model.py  test_python_patterns.py  test_scoring_engine.py  test_security_patterns.py  test_semantic.py  test_sql_patterns.py  test_typescript_patterns.py
