[project]
name = "review-eval"
version = "0.1.0"
description = "Golden test suite to verify Claude Code review quality"
readme = "README.md"
authors = []
requires-python = "==3.12.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pydantic==2.10.1",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
full = [
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "networkx>=3.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "review_eval"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = ["review_eval/fixtures/**", "tests/**"]
venvPath = "."
venv = ".venv"

[tool.ruff]
# Python files to lint/format
target-version = "py312"
line-length = 88

# Enable these rule categories
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "S",   # bandit (security)
    "C90", # mccabe complexity
    "D",   # pydocstring
]

# Disable specific rules that may be too strict for this codebase
lint.ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "S101", # Use of assert (common in tests)
    "B008", # Do not perform function calls in argument defaults
]

# Exclude paths
exclude = [
    "review_eval/fixtures/**",
    "tests/**",
    ".venv/**",
]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in scripts
".github/scripts/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["review_eval"]

[tool.ruff.lint.pydocstyle]
convention = "google"
