[project]
name = "review-eval"
version = "0.1.0"
description = "Golden test suite to verify Claude Code review quality"
readme = "README.md"
authors = []
requires-python = "==3.12.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pydantic==2.10.1",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "prek>=0.1.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]
full = [
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "networkx>=3.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "review_eval"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",                       # Verbose output
    "--strict-markers",         # Error on undefined markers
    "--strict-config",          # Error on unknown config options
    "--tb=short",               # Short traceback format
    "-ra",                      # Show summary of all test outcomes
]
markers = [
    "integration: Integration tests requiring external services (API, database, etc.)",
    "slow: Tests that take longer than 1 second to run",
    "security: Security-focused tests (OWASP, injection, etc.)",
    "python: Tests for Python code analysis",
    "typescript: Tests for TypeScript code analysis",
    "sql: Tests for SQL code analysis",
]

[tool.coverage.run]
source = ["review_eval"]
omit = [
    "tests/*",
    "fixtures/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "ISC", "PIE", "T20", "RET", "SIM", "ARG"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"**/fixtures/**" = ["ARG", "T201", "ALL"]  # Fixtures contain intentionally bad code
"**/tests/**" = ["T201", "W293"]  # Allow print in tests for debugging
"**/*index_repo.py" = ["T201"]  # CLI tool uses print for output
"**/*update_embeddings.py" = ["T201"]  # CLI tool uses print for output
"**/__main__.py" = ["T201"]  # CLI tool uses print for output
"**/multi_model_evaluator.py" = ["T201"]  # Has print_results utility function
"**/semantic/search.py" = ["T201", "ARG002"]  # Has verbose mode with print

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["review_eval"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["review_eval/fixtures/**", "tests/**"]
venvPath = "."
venv = ".venv"

# Strict mode settings - all enabled by default in strict mode
# Listed here for clarity and to allow selective disabling if needed
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true
reportMissingImports = true
reportMissingTypeStubs = false  # Don't complain about missing stubs for third-party libs
reportMissingModuleSource = true
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportPrivateUsage = "error"
reportTypeCommentUsage = "error"
reportPrivateImportUsage = "error"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportUninitializedInstanceVariable = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportTypedDictNotRequiredAccess = "error"
reportPrivateLocalImportUsage = "error"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "error"
reportMissingCallInTypeFormAnnotation = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportMatchNotExhaustive = "error"

[tool.prek]
hooks = [
    "ruff-format",
    "ruff-lint",
    "pyright"
]

[tool.prek.hook.ruff-format]
command = ["uv", "run", "ruff", "format", "."]
description = "Format code with Ruff"
files = '\\.py$'
pass_filenames = false

[tool.prek.hook.ruff-lint]
command = ["uv", "run", "ruff", "check", "--fix", "."]
description = "Lint code with Ruff"
files = '\\.py$'
pass_filenames = false

[tool.prek.hook.pyright]
command = ["uv", "run", "pyright"]
description = "Type check with Pyright"
files = '\\.py$'
pass_filenames = false
